# hugo-nbconvert

./: .gitignore  README.md  TODO.md  pyproject.toml
hugo_nbconvert/: __main__.py  collapse_postprocessor.py  collapse_preprocessor.py  date.py  glob_hugo_ipynb.py  global_config.py  hugo_fix.py  main.py  markdown_convert.py  markdown_processor.py  nb_tools.py  nbconvert_config.py  new.py  resource.py  run.py  tools.py
test_site/: hugo.yaml
test_site/content/post/: .gitignore  another-post.ipynb  another-post.md  demo-post.ipynb  demo-post.md
test_site/content/post/a-demo-ipynb-post/: index.ipynb  index.md
test_site/content/post/a-demo-post/: index.md
test_site/content/post/another-post/: index.md
test_site/content/post/test-hugo-page/: index.ipynb  index.md
tests/: demo-fix.ipynb  file-datetime.ipynb  max-datetime.ipynb  test_glob_full_path.py
tests/my-other-page/: index.ipynb  index.md
tests/page1/: main.ipynb
