[project]
name = "soda-hugo-nbconvert"
version = "2025.5.6.0"
description = "convenient tools for intergrating jupyter notebooks with hugo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/soda92/hugo-nbconvert"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
    "jupyter>=1.1.1",
    "twine>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["hugo_nbconvert"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["hugo_nbconvert"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

# [tool.hatch.build.hooks.custom]

[project.scripts]
hugo_nbconvert = "hugo_nbconvert.main:main"
hugo_nbnew = "hugo_nbconvert.new:main"
